add registration process
